feat: add Spark integration

--- a/helm/okdp-examples/templates/job.yaml
+++ b/helm/okdp-examples/templates/job.yaml
@@ -61,7 +61,7 @@ spec:
               echo "✅ Completed command: {{ $groupName }}"
               {{- end }}
               echo ""
-              echo "🎉 ALL GROUPS COMPLETED SUCCESSFULLY"
+              echo "🎉 ALL COMMANDS SUCCESSFULLY COMPLETED"
 
           {{- with $root.Values.extraEnvRaw }}
           env:
