--- a/helm/okdp-examples/values.yaml
+++ b/helm/okdp-examples/values.yaml
@@ -45,9 +45,28 @@ extraEnvRaw: []
 #    value: https://trino-default.okdp.sandbox
 #  - name: TRINO_TERMINAL
 #    value: dumb
+#  - name: SPARK_EVENT_LOG_DIRECTORY
+#    value: s3a://spark-events/event-logs/
 
 commands:
-  nyc_trip:
+  01-prepare_env:
+    01-create-spark-event-log-dir: |
+      echo "👉 Connect into S3"
+      mc alias set myminio $S3_ENDPOINT "$S3_ACCESS_KEY" "$S3_SECRET_KEY"
+      echo "👉 MinIO alias configured successfully."
+      echo "👉 Normalize the log directory $SPARK_EVENT_LOG_DIRECTORY"
+      no_scheme="${SPARK_EVENT_LOG_DIRECTORY#s3a://}"
+      no_scheme="${no_scheme%/}"
+      bucket="${no_scheme%%/*}"
+      prefix="${no_scheme#${bucket}}"
+      prefix="${prefix#/}"
+      echo "👉 Bucket: $bucket, Prefix: $prefix"
+      echo "👉 Create the bucket $bucket if not exist"
+      mc mb myminio/$bucket || true
+      echo "👉 upload a zero-byte object to create the prefix: ${bucket}/${prefix}/.keep"
+      mc pipe "myminio/${bucket}/${prefix}/.keep" < /dev/null
+      echo "✅ Spark events log directory $SPARK_EVENT_LOG_DIRECTORY successfully created.";
+  02-nyc_trip:
     # https://www.nyc.gov/site/tlc/about/tlc-trip-record-data.page
     01-download-nyc-tripdata: |
       mkdir -p /data/tripdata
